# audformat

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  accessing-data.html  api-define.html  api-errors.html  api-testing.html  api-utils.html  api.html  changelog.html  combine-tables.html  contributing.html  create-database.html  data-conventions.html  data-example.html  data-format.html  data-header.html  data-introduction.html  data-misc-tables.html  data-tables.html  emodb-example.html  genindex.html  index.html  install.html  map-scheme.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  update-database.html
.doctrees/: accessing-data.doctree  api-define.doctree  api-errors.doctree  api-testing.doctree  api-utils.doctree  api.doctree  changelog.doctree  combine-tables.doctree  contributing.doctree  create-database.doctree  data-conventions.doctree  data-example.doctree  data-format.doctree  data-header.doctree  data-introduction.doctree  data-misc-tables.doctree  data-tables.doctree  emodb-example.doctree  environment.pickle  genindex.doctree  index.doctree  install.doctree  map-scheme.doctree  update-database.doctree
.doctrees/__intersphinx_cache__/: audeer_objects.inv  python_objects.inv
.doctrees/api/: audformat.Attachment.doctree  audformat.Column.doctree  audformat.Database.doctree  audformat.Media.doctree  audformat.MiscTable.doctree  audformat.Rater.doctree  audformat.Scheme.doctree  audformat.Split.doctree  audformat.Table.doctree  audformat.assert_index.doctree  audformat.assert_no_duplicates.doctree  audformat.define.DataType.doctree  audformat.define.Gender.doctree  audformat.define.IndexField.doctree  audformat.define.IndexType.doctree  audformat.define.License.doctree  audformat.define.MediaType.doctree  audformat.define.RaterType.doctree  audformat.define.SplitType.doctree  audformat.define.TableStorageFormat.doctree  audformat.define.Usage.doctree  audformat.define.doctree  audformat.doctree  audformat.errors.BadIdError.doctree  audformat.errors.BadKeyError.doctree  audformat.errors.BadTypeError.doctree  audformat.errors.BadValueError.doctree  audformat.errors.TableExistsError.doctree  audformat.errors.doctree  audformat.filewise_index.doctree  audformat.index_type.doctree  audformat.is_filewise_index.doctree  audformat.is_segmented_index.doctree  audformat.segmented_index.doctree  audformat.testing.add_misc_table.doctree  audformat.testing.add_table.doctree  audformat.testing.create_attachment_files.doctree  audformat.testing.create_audio_files.doctree  audformat.testing.create_db.doctree  audformat.testing.doctree  (+21 more)
.github/workflows/: doc.yml  linter.yml  pep8.yml  publish.yml  test.yml
_modules/: index.html
_sources/: api-testing.rst.txt  api-utils.rst.txt  api.rst.txt  combine-tables.rst.txt  create-database.rst.txt  data-conventions.rst.txt  data-example.rst.txt  data-format.rst.txt  data-header.rst.txt  data-introduction.rst.txt  data-misc-tables.rst.txt  data-tables.rst.txt  emodb-example.rst.txt  index.rst.txt  map-scheme.rst.txt  update-database.rst.txt
_sources/api/: audformat.Attachment.rst.txt  audformat.Column.rst.txt  audformat.Database.rst.txt  audformat.Media.rst.txt  audformat.MiscTable.rst.txt  audformat.Rater.rst.txt  audformat.Scheme.rst.txt  audformat.Split.rst.txt  audformat.Table.rst.txt  audformat.assert_index.rst.txt  audformat.assert_no_duplicates.rst.txt  audformat.define.DataType.rst.txt  audformat.define.Gender.rst.txt  audformat.define.IndexField.rst.txt  audformat.define.IndexType.rst.txt  audformat.define.License.rst.txt  audformat.define.MediaType.rst.txt  audformat.define.RaterType.rst.txt  audformat.define.SplitType.rst.txt  audformat.define.TableStorageFormat.rst.txt  audformat.define.Usage.rst.txt  audformat.define.rst.txt  audformat.errors.BadIdError.rst.txt  (+34 more)
_static/: copybutton.js
api/: audformat.Attachment.html  audformat.Column.html  audformat.Database.html  audformat.Media.html  audformat.MiscTable.html  audformat.Rater.html  audformat.Scheme.html  audformat.Split.html  audformat.Table.html  audformat.assert_index.html  audformat.assert_no_duplicates.html  audformat.define.DataType.html  audformat.define.Gender.html  audformat.define.IndexField.html  audformat.define.IndexType.html  audformat.define.License.html  audformat.define.MediaType.html  audformat.define.RaterType.html  audformat.define.SplitType.html  audformat.define.TableStorageFormat.html  audformat.define.Usage.html  audformat.define.html  audformat.errors.BadIdError.html  audformat.errors.BadKeyError.html  audformat.errors.BadTypeError.html  audformat.errors.BadValueError.html  audformat.errors.TableExistsError.html  audformat.errors.html  audformat.filewise_index.html  audformat.html  audformat.index_type.html  audformat.is_filewise_index.html  audformat.is_segmented_index.html  audformat.segmented_index.html  audformat.testing.add_misc_table.html  audformat.testing.add_table.html  audformat.testing.create_attachment_files.html  audformat.testing.create_audio_files.html  audformat.testing.create_db.html  audformat.testing.html  (+21 more)
audformat/: __init__.py
benchmarks/: benchmark_hash.py  benchmark_union.py
docs/: accessing-data.rst  api-audformat.rst  api-define.rst  api-errors.rst  api-testing.rst  api-utils-misc.rst  api-utils.rst  api.rst  audformat.database.rst  audformat.rst  audformat.utils.rst  combine-tables.rst  conf.py  conftest.py  create-database.rst  data-conventions.rst  data-example.rst  data-format.rst  data-header.rst  data-introduction.rst  data-misc-tables.rst  data-tables.rst  emodb-example.rst  index.rst  install.rst  map-scheme.rst  requirements.txt  update-database.rst  usage.rst
tests/: conftest.py  requirements.txt  test_attachment.py  test_column.py  test_common.py  test_database.py  test_database_get.py  test_eq.py  test_errors.py  test_index.py  test_misc_table.py  test_overlapping_segments_exploding.py  test_scheme.py  test_table.py  test_utils.py  test_utils_concat.py  test_utils_misc.py
(+52 files in other folders)
