[metadata]
name = audformat
author = Johannes Wagner, Hagen Wierstorf
author_email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audformat/
project_urls =
    Documentation = https://audeering.github.io/audformat/
description = Python implementation of audformat
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = audio, database, annotation
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.18.0,<2.0.0
    audiofile >=0.4.0
    iso-639
    oyaml
    pyyaml >=5.4.1
    # https://github.com/audeering/audformat/pull/101
    # https://github.com/audeering/audformat/pull/142
    pandas >=1.1.5,!=1.3.0,!=1.3.1,!=1.3.2,!=1.3.3
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audformat
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true


[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
    docs/examples/*.py F821  # ignore undefined variables
