[metadata]
name = audformat
author = Johannes Wagner, Hagen Wierstorf, Baha Eddine Abrougui
author_email = jwagner@audeering.com, hwierstorf@audeering.com, beddine@audeering.com
url = https://github.com/audeering/audformat/
project_urls =
    Documentation = https://audeering.github.io/audformat/
description = Python implementation of audformat
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = audio, database, annotation
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.18.0,<2.0.0
    audiofile >=0.4.0
    iso-639
    iso3166
    oyaml
    pyyaml >=5.4.1
    pandas >=1.4.1
python_requires = >=3.8
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audformat
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true


[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused and * imports
    __init__.py: F401, F403,
